# novel-downloader

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test-release.yml  update_legado_sources.yml
docs/: index.md
docs/guide/: installation.md  settings-reference.md
scripts/: site_data_tool.py  site_data_tool_diff.py  site_data_tool_io.py  update_legado_sources.py
src/novel_downloader/: __init__.py
src/novel_downloader/apps/cli/commands/: __init__.py  download.py  legado.py
src/novel_downloader/apps/web/: __init__.py  models.py
src/novel_downloader/apps/web/services/: __init__.py  task_manager.py
src/novel_downloader/infra/: book_url_resolver.py  i18n.py  paths.py
src/novel_downloader/libs/crypto/cipher/: AES.py  _aes_decrypt_tables.py
src/novel_downloader/plugins/processors/translator/: edge.py
src/novel_downloader/plugins/sites/legado/: __init__.py  fetcher.py  manager.py  parser.py  rule_engine.py  schema.py
src/novel_downloader/plugins/sites/shaoniandream/: parser.py
src/novel_downloader/resources/legado_sources/: tickmao.json  xiuyuedu.json
tests/apps/web/: test_task_manager.py
tests/plugins/: test_legado_builtin_sources.py  test_legado_manager.py  test_search.py  test_shaoniandream_parser.py
tests/plugins/processors/: test_edge_translator.py
tests/scripts/: test_update_legado_sources.py
